--- a/17000spin.html
+++ b/17000spin.html
@@ -12,7 +12,7 @@
 	  <button >click to go to 0 mph spin</button>
     <p>Current spin: 0</p>
     <canvas width="500" height="500" id="myCanvas" style="border: 1px solid black;"> </canvas>
-    <p> This is my attempt at making normal gravity. The earth is spinning at its normal rate</p>
+    <p> Because the centrifugal force is equal to the forceo of gravity you are weightless. (the code is broken kinda)</p>
 	  <script src="code2.js"></script>
 
 
