--- a/1000spin.html
+++ b/1000spin.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1><strong>Earth spin simulation</strong> </h1>
-	  	 <button onClick="window.location.href='/index.html'">click to go to 0 mph spin</button>
-	  <button >click to go to 17000 mph spin</button>
+	  	 <button onClick="window.location.href='https://slowpoke212.github.io/EarthSpinningFast/17000spin'">click to go to 0 mph spin</button>
+	  <button onClick="window.location.href='https://slowpoke212.github.io/EarthSpinningFast/'">click to go to 17000 mph spin</button>
   <p>Current spin: 1000 mph</p>
 	  <img src="../earthflooded.png" id="earth2" width="256" height="231" alt="" />
   <p> The earth spin makes water rush to the equator flooding it leaveing only the tallest mountains </p>
