--- a/17000spin.html
+++ b/17000spin.html
@@ -9,7 +9,7 @@
   <body>
     <h1><strong>Earth spin simulation</strong> </h1>
 	 <button onClick="window.location.href='/1000spin'">click to go to 1000 mph spin</button>
-	  <button >click to go to 0 mph spin</button>
+	  <button onClick="window.location.href='https://slowpoke212.github.io/EarthSpinningFast/'">click to go to 0 mph spin</button>
     <p>Current spin: 0</p>
     <canvas width="500" height="500" id="myCanvas" style="border: 1px solid black;"> </canvas>
     <p> Because the centrifugal force is equal to the forceo of gravity you are weightless. (the code is broken kinda)</p>
