--- a/17000spin.html
+++ b/17000spin.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1><strong>Earth spin simulation</strong> </h1>
-	 <button onClick="window.location.href='/1000spin'">click to go to 1000 mph spin</button>
+	 <button onClick="window.location.href='https://slowpoke212.github.io/EarthSpinningFast/1000spin'">click to go to 1000 mph spin</button>
 	  <button onClick="window.location.href='https://slowpoke212.github.io/EarthSpinningFast/'">click to go to 0 mph spin</button>
     <p>Current spin: 0</p>
     <canvas width="500" height="500" id="myCanvas" style="border: 1px solid black;"> </canvas>
