--- a/1000spin.html
+++ b/1000spin.html
@@ -11,7 +11,7 @@
 	  	 <button onClick="window.location.href='https://slowpoke212.github.io/EarthSpinningFast/17000spin'">click to go to 0 mph spin</button>
 	  <button onClick="window.location.href='https://slowpoke212.github.io/EarthSpinningFast/'">click to go to 17000 mph spin</button>
   <p>Current spin: 1000 mph</p>
-	  <img src="../earthflooded.png" id="earth2" width="256" height="231" alt="" />
+	  <img src="earthflooded.png" id="earth2" width="256" height="231" alt="" />
   <p> The earth spin makes water rush to the equator flooding it leaveing only the tallest mountains </p>
 	  <img src="hurricane.jpg" width="560" height="266" alt=""/>
 	  <p>Hurricanes become much stronger because of the wind </p>
