--- a/sources.html
+++ b/sources.html
@@ -1,1 +1,20 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Earth spin</title>
+  <link href="style.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <h1><strong>Earth spin simulation</strong> </h1>
+	 <button onClick="window.location.href='https://slowpoke212.github.io/EarthSpinningFast/1000spin'">click to go to 1000 mph spin</button>
+	  <button onClick="window.location.href='https://slowpoke212.github.io/EarthSpinningFast/17000spin'">click to go to 17000 mph spin</button>
+    <p>Sources</p>
+    <a href="https://www.popsci.com/earth-spin-faster/#:~:text=The%20faster%20the%20Earth%20spins,%2C%20probably%20wouldn't%20notice.">https://www.popsci.com</a>
+    <a href="https://www.popularmechanics.com/science/environment/a14397548/world-spinning-twice-as-fast/">https://www.popularmechanics.com</a>
+
+
+  </body>
+</html>
