--- a/1000spin.html
+++ b/1000spin.html
@@ -17,6 +17,6 @@
 	  <p>Hurricanes become much stronger because of the wind </p>
   <script src="code2.js"></script>
 	  <br>
-
+	<button onClick="window.location.href='https://slowpoke212.github.io/EarthSpinningFast/sources'">click to go to sources</button>
   </body>
 </html>
