--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <canvas width="500" height="500" id="myCanvas" style="border: 1px solid black;"> </canvas>
     <p> This is my attempt at making normal gravity. The earth is spinning at its normal rate</p>
 	  <script src="code.js"></script>
+	  <button onClick="window.location.href='https://slowpoke212.github.io/EarthSpinningFast/sources'">click to go to sources</button>
 
   </body>
 </html>
