--- a/17000spin.html
+++ b/17000spin.html
@@ -15,7 +15,7 @@
     <p> Because the centrifugal force is equal to the forceo of gravity you are weightless. (the code is broken kinda)</p>
 	  <script src="code2.js"></script>
 
-
+	<button onClick="window.location.href='https://slowpoke212.github.io/EarthSpinningFast/sources'">click to go to sources</button>
   </body>
 </html>
 
